--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,10 @@ description = "PuzzleCaptcha: Simplified Math CAPTCHA Using Pillow Image Library
 authors = ["Suraj Singh Bisht <surajsinghbisht054@gmail.com>"]
 license = "MIT"
 readme = "README.md"
+packages = [
+    {include = "puzzlecaptcha"},
+]
+
 
 [tool.poetry.dependencies]
 python = ">=3.9"
